--- a/signlogin.css
+++ b/signlogin.css
@@ -3,31 +3,34 @@ body, html {
     padding: 0;
     font-family: Arial, sans-serif;
     box-sizing: border-box;
-    background-color: #121212;
-    color: #f1f1f1;
+    background-color: #f0f0f0;
+    color: #333;
 }
-.content{
+
+.content {
     padding: 20px;
     text-align: center;
-
 }
-.mark-logo{
+
+.mark-logo {
     width: 70px;
     height: 70px;
 }
+
 .container {
     text-align: left;
     max-width: 400px;
     margin: 50px auto;
     padding: 20px;
-    background-color: #1f1f1f;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    background-color: #ffffff;
+    border-radius: 12px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 h2 {
     text-align: center;
     margin-bottom: 20px;
+    color: #333;
 }
 
 form {
@@ -38,21 +41,22 @@ form {
 label {
     margin-bottom: 5px;
     font-weight: bold;
+    color: #333;
 }
 
 input {
     margin-bottom: 15px;
     padding: 10px;
     border: none;
-    border-radius: 5px;
-    background-color: #333;
-    color: #f1f1f1;
+    border-radius: 12px;
+    background-color: #f0f0f0;
+    color: #333;
 }
 
 button {
     padding: 10px;
     border: none;
-    border-radius: 5px;
+    border-radius: 12px;
     background-color: #007bff;
     color: white;
     font-size: 16px;
@@ -60,11 +64,11 @@ button {
 }
 
 button:hover {
-    background-color: #014ea1;
+    background-color: #0056b3;
 }
 
-a{
-    color: #4869ff;
+a {
+    color: #007bff;
     text-decoration: none;
 }
 
