--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ html {
     padding: 0;
     font-family: Arial, sans-serif;
     box-sizing: border-box;
-    background-color: #121212;
-    color: #f1f1f1;
+    background-color: #f0f0f0;
+    color: #333;
 }
 
 header {
@@ -13,21 +13,22 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color: #1f1f1f;
-    color: white;
+    background-color: #ffffff;
+    color: #333;
 }
 
 .logo img {
     height: 40px;
 }
+
 .username {
-    text-align:center;
-    align-items:center;
-    justify-content:center;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
 span {
-    color: white;
+    color: #333;
     display: flex;
     align-items: center;
 }
@@ -35,6 +36,7 @@ span {
 #user {
     width: 40px;
     height: 40px;
+    border-radius: 50%;
 }
 
 main {
@@ -55,28 +57,26 @@ main {
     height: 50px;
     padding: 10px;
     background-color: #007bff;
-    /* Bouton sombre */
-    color: #e0e0e0;
+    color: #ffffff;
     font-size: 20px;
     border: none;
-    border-radius: 10px;
+    border-radius: 12px;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 button:hover {
-    background-color: #014ea1;
-    /* Changement de couleur au survol */
+    background-color: #0056b3;
     transform: translateY(-3px);
-    /* Légère animation au survol */
 }
 
 a {
     text-decoration: none;
+    color: #007bff;
 }
 
 #link {
-    color: aqua;
+    color: #007bff;
 }
 
 .text {
@@ -87,16 +87,18 @@ a {
 strong {
     font-size: 25px;
     font-weight: 500;
+    color: #333;
 }
 
 footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    background-color: #1f1f1f;
-    color: white;
+    background-color: #ffffff;
+    color: #333;
     text-align: center;
     padding: 10px 0;
+    border-top: 1px solid #ccc;
 }
 
 footer ul {
@@ -115,7 +117,7 @@ footer ul li {
 }
 
 footer ul li a {
-    color: white;
+    color: #007bff;
     text-decoration: none;
     font-size: 1.2em;
     display: flex;
@@ -129,13 +131,9 @@ footer ul li a:hover {
 
 footer ul li a i {
     font-size: 2em;
-    /* Taille des icônes */
     margin-bottom: 5px;
-    /* Espace entre l'icône et le texte */
 }
 
-
- 
 /* Responsive adjustments */
 @media (max-width: 600px) {
     footer ul {
